# falling_sand

./: CMakeLists.txt  README.md
include/: debug.hpp
include/glad/: glad.h
include/glsl/: sand.hpp
src/: glad.c  main.cpp
